# BigProject

./: CMakeLists.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/Autotest/: Autotest.cpp  Autotest.h  CMakeLists.txt  main.cpp
src/apps/Viewer2d/: CMakeLists.txt  drawwidget.cpp  drawwidget.h  longdouble.cpp  longdouble.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lib/: CMakeLists.txt
src/lib/PlaneGeometry/: CMakeLists.txt  PlaneOperations.cpp  PlaneOperations.h
